# monorepo-sandbox

./: .bazelrc  .env  .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE  config.bzl  docker-compose.yml  notes.txt  rustfmt.toml
archive/: BUILD
archive/src/: lib.rs
config/: BUILD
config/src/: lib.rs  pyo3.rs
python/: BUILD  call_ext.py  main.py
rust/: BUILD  ext.rs  main.rs
services/django_app/: BUILD  defs.bzl  manage.py
services/django_app/archive/: BUILD  admin.py  apps.py  models.py  urls.py  views.py
services/django_app/archive/migrations/: 0001_initial.py
services/django_app/archive/templates/archive/: create.html  preview.html
services/django_app/django_app/: db_settings.py  settings.py  urls.py
services/django_app/docker/: BUILD
services/ingest/: BUILD
services/ingest/docker/: BUILD
services/ingest/proto/: ingest.proto
services/ingest/src/: main.rs
services/storage/: BUILD  main.py
services/storage/docker/: BUILD
services/storage/proto/: storage.proto
tools/: docker.bzl  llvm.MODULE.bazel  proto.bzl
tools/prost/: BUILD
